<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/imgM"
        android:layout_height="@dimen/imgM"
        android:src="@drawable/logo_smk_new"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="APLIKASI TEFA \n SMK PGRI TELAGASARI"
        android:textAlignment="center"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/logo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/s"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        style="@style/imageIcon"
                        android:src="@drawable/icon_home"
                        />

                    <TextView
                        android:text="@string/home"
                        style="@style/imageDesc"
                        />

                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardPDF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        style="@style/imageIcon"
                        android:src="@drawable/icon_pdf"
                        />

                    <TextView
                        android:text="@string/pdf"
                        style="@style/imageDesc"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardBrowser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        style="@style/imageIcon"
                        android:src="@drawable/icon_web"
                        />

                    <TextView
                        android:text="@string/browser"
                        style="@style/imageDesc"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        style="@style/imageIcon"
                        android:src="@drawable/icon_info"
                        />

                    <TextView
                        android:text="@string/bantuan"
                        style="@style/imageDesc"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardProduk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        style="@style/imageIcon"
                        android:src="@drawable/icon_hand_over"
                        />

                    <TextView
                        android:text="@string/produk"
                        style="@style/imageDesc"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardSiswa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        style="@style/imageIcon"
                        android:src="@drawable/icon_edu_cap"
                        />

                    <TextView
                        android:text="@string/siswa"
                        style="@style/imageDesc"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardSurvey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        style="@style/imageIcon"
                        android:src="@drawable/icon_survey"
                        />

                    <TextView
                        android:text="@string/survey"
                        style="@style/imageDesc"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        style="@style/imageIcon"
                        android:src="@drawable/icon_gallery"
                        />

                    <TextView
                        android:text="@string/galery"
                        style="@style/imageDesc"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cardExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <ImageView
                        style="@style/imageIcon"
                        android:src="@drawable/icon_logout"
                        />

                    <TextView
                        android:text="@string/exit"
                        style="@style/imageDesc"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>